@@ -41,7 +41,8 @@ marked for removal in alpha 1.3.0:
     [2] the mcpython.storage.datafixer folder
     [2] SaveFile.upgrade()
     [2] Chunk.exposed()
-    [2]: util/math.py/get_max_y()
+    [2] util/math.py/get_max_y()
+    [2] EventBus.subscribe_package_load()
 
 marked for removal in alpha 1.4.0:
     [2] Item.get_name, Block.get_name, State.get_name
