@@ -1197,3 +1197,4 @@ sstarted these clone on 12th of July, 2019
        doing an new item / block
 [uuk]: item name can now be based to the constructor of ItemFactory and to the () of an instance
 [uuk]: fixed logger prefixing every part with time (issue 228)
+[uuk]: added preparing for locked registries (currently only warned by the system)
