@@ -64,6 +64,8 @@ changelog of snapshot [next] (theme: fixing stuff & upgrading base to 1.16)
     - added --enable-all-blocks runtime flag for enabling all optional blocks
     - added profiler for world generation
     - added button to delete world in world selection screen
+    - registries get now "locked" after mod loading finished (they are still write-able, but this will get removed in
+        the future as it will get replaced by reload-registries-events)
 
     fixed issues:
         from previous snapshot:
